# Chinese2Lean

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  lake-manifest.json  lakefile.toml  pyproject.toml
backend/: README.md  __init__.py  __main__.py  app.py  models.py  server.py
config/: config.yaml
desktop/: README.md  __init__.py  __main__.py  app.py  controller.py  initialization.py  local_api.py
docs/: adding_a_domain.md  api.md  architecture.md  controlled_chinese.md  design.md  development_setup.md  ir.md  lean_generation.md  limitations.md  repair.md  terminology.md  testing.md  troubleshooting.md  type_system.md  verification.md
examples/: positive_add_one.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
lean_workspace/: Chinese2Lean.lean
scripts/: bootstrap-dev.ps1
terminology/: algebra.yaml  calculus.yaml  core.yaml  inequalities.yaml  logic.yaml  manifest.yaml  numbers.yaml  sets.yaml
tests/: test_application_service.py  test_backend_server.py  test_batch_verification.py  test_bootstrap_script.py  test_cli_api.py  test_cli_phase1.py  test_cli_unicode.py  test_core.py  test_desktop_controller.py  test_desktop_gui.py  test_e2e_lean.py  test_environment_initialization.py  test_environment_process.py  test_environment_runtime_integration.py  test_failure_cases.py  test_initialization_gui.py  test_integration_cases.py  test_parser_phase1.py  test_phase1_contracts.py  test_process_security.py  test_product_api.py  test_product_platform.py  test_product_schemas.py  test_product_storage.py  (+6 more)
(+83 files in other folders)
